--- a/src/app/header/header.scss
+++ b/src/app/header/header.scss
@@ -2,10 +2,33 @@
   .header-content {
     padding: 40px 0 100px;
     .logo-wrapper {
+      position: relative;
       height: 40px;
       width: 40px;
       border-radius: 50%;
-      background: var(--color-label);
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+      &::before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 5px;
+        background: #252525;
+      }
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 5px;
+        background: #252525;
+      }
     }
   }
 }
