--- a/src/app/auth/form/form.scss
+++ b/src/app/auth/form/form.scss
@@ -4,6 +4,11 @@
   margin: 1rem 3rem;
 }
 
+jsd-input {
+  margin-bottom: 10px;
+  display: block;
+}
+
 .login-form {
   width: 100%;
   .form-item {
