--- a/src/app/menu/menu.scss
+++ b/src/app/menu/menu.scss
@@ -198,6 +198,11 @@
       .logout {
         padding: 0 0 50px;
         font-size: 16px;
+        display: flex;
+        flex-direction: column;
+        jsd-button {
+          --color-primary: #ffffff;
+        }
       }
       .heart {
         font-size: 1.2rem;
